analizador sintáctico/parser.out
Grammar:

Rule 0     S' -> lola
Rule 1     lola -> modulo
Rule 2     lola -> lola modulo
Rule 3     tipoSimple -> ID
Rule 4     tipoSimple -> ID ( listaExpresiones )
Rule 5     tipoSimple -> tipoBasico
Rule 6     tipoBasico -> error
Rule 7     tipoBasico -> OC
Rule 8     tipoBasico -> TS
Rule 9     tipoBasico -> BIT
Rule 10    listaExpresiones -> expresion
Rule 11    listaExpresiones -> listaExpresiones , expresion
Rule 12    tipo -> tipoExpresiones tipoSimple
Rule 13    tipoExpresiones -> empty
Rule 14    tipoExpresiones -> tipoExpresionesR
Rule 15    tipoExpresionesR -> [ expresion ]
Rule 16    tipoExpresionesR -> tipoExpresionesR [ expresion ]
Rule 17    declaracionConstante -> error
Rule 18    declaracionConstante -> ID DOSPUNTOSIGUAL expresion ;
Rule 19    declaracionVariable -> listaId error
Rule 20    declaracionVariable -> listaId : tipo ;
Rule 21    listaId -> error
Rule 22    listaId -> ID
Rule 23    listaId -> listaId , ID
Rule 24    selector -> error
Rule 25    selector -> empty
Rule 26    selector -> selectorR
Rule 27    selectorR -> selectorRR
Rule 28    selectorR -> selectorR selectorRR
Rule 29    selectorRR -> [ expresion ]
Rule 30    selectorRR -> . INTEGER
Rule 31    selectorRR -> . ID
Rule 32    factor -> SR ( expresion , expresion )
Rule 33    factor -> LATCH ( expresion , expresion )
Rule 34    factor -> REG ( expresion , expresion )
Rule 35    factor -> REG ( expresion )
Rule 36    factor -> MUX ( expresion , expresion : expresion , expresion , expresion , expresion )
Rule 37    factor -> MUX ( expresion : expresion , expresion )
Rule 38    factor -> ( expresion )
Rule 39    factor -> ~ factor
Rule 40    factor -> FLECHAARRIBA factor
Rule 41    factor -> INTEGER
Rule 42    factor -> LOGICVALUE
Rule 43    factor -> ID selector
Rule 44    termino -> error factor
Rule 45    termino -> factor
Rule 46    termino -> termino simbolosProd factor
Rule 47    simbolosProd -> MOD
Rule 48    simbolosProd -> DIV
Rule 49    simbolosProd -> /
Rule 50    simbolosProd -> *
Rule 51    expresion -> termino
Rule 52    expresion -> expresion - termino
Rule 53    expresion -> expresion + termino
Rule 54    asignacion -> ID selector DOSPUNTOSIGUAL condicion | expresion
Rule 55    asignacion -> ID selector DOSPUNTOSIGUAL expresion
Rule 56    condicion -> expresion
Rule 57    relacion -> expresion MAYORIGUAL expresion
Rule 58    relacion -> expresion > expresion
Rule 59    relacion -> expresion MENORIGUAL expresion
Rule 60    relacion -> expresion < expresion
Rule 61    relacion -> expresion # expresion
Rule 62    relacion -> expresion = expresion
Rule 63    sentenciaSi -> IF relacion THEN sentenciaSecuencia sentenciaSiSino sentenciaSiEntonces END
Rule 64    sentenciaSiSino -> empty
Rule 65    sentenciaSiSino -> sentenciaSiSinoR
Rule 66    sentenciaSiSinoR -> ELSIF relacion THEN sentenciaSecuencia
Rule 67    sentenciaSiSinoR -> sentenciaSiSinoR ELSIF relacion THEN sentenciaSecuencia
Rule 68    sentenciaSiEntonces -> empty
Rule 69    sentenciaSiEntonces -> ELSE sentenciaSecuencia
Rule 70    sentenciaPara -> FOR ID DOSPUNTOSIGUAL expresion DOBLEPUNTO expresion DO sentenciaSecuencia END
Rule 71    sentencia -> empty
Rule 72    sentencia -> sentenciaPara
Rule 73    sentencia -> sentenciaSi
Rule 74    sentencia -> asignacionUnidad
Rule 75    sentencia -> asignacion
Rule 76    sentenciaSecuencia -> sentencia
Rule 77    sentenciaSecuencia -> sentenciaSecuencia ; sentencia
Rule 78    modulo -> MODULE ID ; error
Rule 79    modulo -> MODULE ID ; declaracionTipoPuntoComa declaracionConstanteCONST declaracionVariableIN declaracionVariableINOUT declaracionVariableOUT declaracionVariableVAR declaracionRelacionPOS sentenciaSecuenciaBEGIN END ID .
Rule 80    declaracionTipoPuntoComa -> empty
Rule 81    declaracionTipoPuntoComa -> declaracionTipoPuntoComaR
Rule 82    declaracionTipoPuntoComaR -> declaracionTipo ;
Rule 83    declaracionTipoPuntoComaR -> declaracionTipoPuntoComaR declaracionTipo ;
Rule 84    declaracionConstanteCONST -> empty
Rule 85    declaracionConstanteCONST -> CONST declaracionConstanteRecursivo
Rule 86    declaracionConstanteRecursivo -> empty
Rule 87    declaracionConstanteRecursivo -> declaracionConstanteRecursivoR
Rule 88    declaracionConstanteRecursivoR -> declaracionConstante
Rule 89    declaracionConstanteRecursivoR -> declaracionConstanteRecursivoR declaracionConstante
Rule 90    declaracionVariableIN -> empty
Rule 91    declaracionVariableIN -> IN declaracionVariableRecursivo
Rule 92    declaracionVariableRecursivo -> empty
Rule 93    declaracionVariableRecursivo -> declaracionVariableRecursivoR
Rule 94    declaracionVariableRecursivoR -> declaracionVariable
Rule 95    declaracionVariableRecursivoR -> declaracionVariableRecursivoR declaracionVariable
Rule 96    declaracionVariableINOUT -> empty
Rule 97    declaracionVariableINOUT -> INOUT declaracionVariableRecursivo
Rule 98    declaracionVariableOUT -> empty
Rule 99    declaracionVariableOUT -> OUT declaracionVariableRecursivo
Rule 100   declaracionVariableVAR -> empty
Rule 101   declaracionVariableVAR -> VAR declaracionVariableRecursivo
Rule 102   declaracionRelacionPOS -> empty
Rule 103   declaracionRelacionPOS -> POS declaracionRelacionRecursivo
Rule 104   declaracionRelacionRecursivo -> empty
Rule 105   declaracionRelacionRecursivo -> declaracionRelacionR
Rule 106   declaracionRelacionR -> relacion ;
Rule 107   declaracionRelacionR -> declaracionRelacionR relacion ;
Rule 108   sentenciaSecuenciaBEGIN -> empty
Rule 109   sentenciaSecuenciaBEGIN -> BEGIN sentenciaSecuencia
Rule 110   tipoFormal -> error
Rule 111   tipoFormal -> expresionCorcheteO BIT
Rule 112   expresionCorcheteO -> empty
Rule 113   expresionCorcheteO -> expresionCorcheteOR
Rule 114   expresionCorcheteOR -> [ expresionOpcional ]
Rule 115   expresionCorcheteOR -> expresionCorcheteOR [ expresionOpcional ]
Rule 116   expresionOpcional -> empty
Rule 117   expresionOpcional -> expresion
Rule 118   tipoFormalBus -> error
Rule 119   tipoFormalBus -> expresionCorcheteO OC
Rule 120   tipoFormalBus -> expresionCorcheteO TS
Rule 121   declaracionTipo -> TYPE ID error
Rule 122   declaracionTipo -> TYPE ID simboloPor listaIdParentesis ; declaracionConstanteCONST tipoFormalIN tipoFormalINOUT declaracionVariableOUT declaracionVariableVAR declaracionRelacionPOS sentenciaSecuenciaBEGIN END ID
Rule 123   simboloPor -> empty
Rule 124   simboloPor -> *
Rule 125   listaIdParentesis -> empty
Rule 126   listaIdParentesis -> ( listaId )
Rule 127   tipoFormalIN -> empty
Rule 128   tipoFormalIN -> IN tipoFormallistaId
Rule 129   tipoFormallistaId -> empty
Rule 130   tipoFormallistaId -> tipoFormallistaIdR
Rule 131   tipoFormallistaIdR -> listaId : tipoFormal ;
Rule 132   tipoFormallistaIdR -> tipoFormallistaIdR listaId : tipoFormal ;
Rule 133   tipoFormalINOUT -> empty
Rule 134   tipoFormalINOUT -> INOUT tipoFormlBuslistaId
Rule 135   tipoFormlBuslistaId -> empty
Rule 136   tipoFormlBuslistaId -> tipoFormlBuslistaIdR
Rule 137   tipoFormlBuslistaIdR -> listaId : tipoFormalBus ;
Rule 138   tipoFormlBuslistaIdR -> tipoFormlBuslistaIdR listaId : tipoFormalBus ;
Rule 139   asignacionUnidad -> error
Rule 140   asignacionUnidad -> ID selector ( listaExpresiones )
Rule 141   empty -> <empty>

Terminals, with rules where they appear:

#                    : 61
(                    : 4 32 33 34 35 36 37 38 126 140
)                    : 4 32 33 34 35 36 37 38 126 140
*                    : 50 124
+                    : 53
,                    : 11 23 32 33 34 36 36 36 36 37
-                    : 52
.                    : 30 31 79
/                    : 49
:                    : 20 36 37 131 132 137 138
;                    : 18 20 77 78 79 82 83 106 107 122 131 132 137 138
<                    : 60
=                    : 62
>                    : 58
BEGIN                : 109
BIT                  : 9 111
CONST                : 85
DIV                  : 48
DO                   : 70
DOBLEPUNTO           : 70
DOSPUNTOSIGUAL       : 18 54 55 70
ELSE                 : 69
ELSIF                : 66 67
END                  : 63 70 79 122
FLECHAARRIBA         : 40
FOR                  : 70
ID                   : 3 4 18 22 23 31 43 54 55 70 78 79 79 121 122 122 140
IF                   : 63
IN                   : 91 128
INOUT                : 97 134
INTEGER              : 30 41
LATCH                : 33
LOGICVALUE           : 42
MAYORIGUAL           : 57
MENORIGUAL           : 59
MOD                  : 47
MODULE               : 78 79
MUX                  : 36 37
OC                   : 7 119
OUT                  : 99
POS                  : 103
REG                  : 34 35
SR                   : 32
THEN                 : 63 66 67
TS                   : 8 120
TYPE                 : 121 122
VAR                  : 101
[                    : 15 16 29 114 115
]                    : 15 16 29 114 115
error                : 6 17 19 21 24 44 78 110 118 121 139
|                    : 54
~                    : 39

Nonterminals, with rules where they appear:

asignacion           : 75
asignacionUnidad     : 74
condicion            : 54
declaracionConstante : 88 89
declaracionConstanteCONST : 79 122
declaracionConstanteRecursivo : 85
declaracionConstanteRecursivoR : 87 89
declaracionRelacionPOS : 79 122
declaracionRelacionR : 105 107
declaracionRelacionRecursivo : 103
declaracionTipo      : 82 83
declaracionTipoPuntoComa : 79
declaracionTipoPuntoComaR : 81 83
declaracionVariable  : 94 95
declaracionVariableIN : 79
declaracionVariableINOUT : 79
declaracionVariableOUT : 79 122
declaracionVariableRecursivo : 91 97 99 101
declaracionVariableRecursivoR : 93 95
declaracionVariableVAR : 79 122
empty                : 13 25 64 68 71 80 84 86 90 92 96 98 100 102 104 108 112 116 123 125 127 129 133 135
expresion            : 10 11 15 16 18 29 32 32 33 33 34 34 35 36 36 36 36 36 36 37 37 37 38 52 53 54 55 56 57 57 58 58 59 59 60 60 61 61 62 62 70 70 117
expresionCorcheteO   : 111 119 120
expresionCorcheteOR  : 113 115
expresionOpcional    : 114 115
factor               : 39 40 44 45 46
listaExpresiones     : 4 11 140
listaId              : 19 20 23 126 131 132 137 138
listaIdParentesis    : 122
lola                 : 2 0
modulo               : 1 2
relacion             : 63 66 67 106 107
selector             : 43 54 55 140
selectorR            : 26 28
selectorRR           : 27 28
sentencia            : 76 77
sentenciaPara        : 72
sentenciaSecuencia   : 63 66 67 69 70 77 109
sentenciaSecuenciaBEGIN : 79 122
sentenciaSi          : 73
sentenciaSiEntonces  : 63
sentenciaSiSino      : 63
sentenciaSiSinoR     : 65 67
simboloPor           : 122
simbolosProd         : 46
termino              : 46 51 52 53
tipo                 : 20
tipoBasico           : 5
tipoExpresiones      : 12
tipoExpresionesR     : 14 16
tipoFormal           : 131 132
tipoFormalBus        : 137 138
tipoFormalIN         : 122
tipoFormalINOUT      : 122
tipoFormallistaId    : 128
tipoFormallistaIdR   : 130 132
tipoFormlBuslistaId  : 134
tipoFormlBuslistaIdR : 136 138
tipoSimple           : 12


state 0

    (0) S' -> . lola
    (1) lola -> . modulo
    (2) lola -> . lola modulo
    (78) modulo -> . MODULE ID ; error
    (79) modulo -> . MODULE ID ; declaracionTipoPuntoComa declaracionConstanteCONST declaracionVariableIN declaracionVariableINOUT declaracionVariableOUT declaracionVariableVAR declaracionRelacionPOS sentenciaSecuenciaBEGIN END ID .
    MODULE          shift and go to state 3

    lola                           shift and go to state 1
    modulo                         shift and go to state 2

state 1

    (0) S' -> lola .
    (2) lola -> lola . modulo
    (78) modulo -> . MODULE ID ; error
    (79) modulo -> . MODULE ID ; declaracionTipoPuntoComa declaracionConstanteCONST declaracionVariableIN declaracionVariableINOUT declaracionVariableOUT declaracionVariableVAR declaracionRelacionPOS sentenciaSecuenciaBEGIN END ID .
    MODULE          shift and go to state 3

    modulo                         shift and go to state 4

state 2

    (1) lola -> modulo .
    MODULE          reduce using rule 1 (lola -> modulo .)
    $end            reduce using rule 1 (lola -> modulo .)


state 3

    (78) modulo -> MODULE . ID ; error
    (79) modulo -> MODULE . ID ; declaracionTipoPuntoComa declaracionConstanteCONST declaracionVariableIN declaracionVariableINOUT declaracionVariableOUT declaracionVariableVAR declaracionRelacionPOS sentenciaSecuenciaBEGIN END ID .
    ID              shift and go to state 5


state 4

    (2) lola -> lola modulo .
    MODULE          reduce using rule 2 (lola -> lola modulo .)
    $end            reduce using rule 2 (lola -> lola modulo .)


state 5

    (78) modulo -> MODULE ID . ; error
    (79) modulo -> MODULE ID . ; declaracionTipoPuntoComa declaracionConstanteCONST declaracionVariableIN declaracionVariableINOUT declaracionVariableOUT declaracionVariableVAR declaracionRelacionPOS sentenciaSecuenciaBEGIN END ID .
    ;               shift and go to state 6


state 6

    (78) modulo -> MODULE ID ; . error
    (79) modulo -> MODULE ID ; . declaracionTipoPuntoComa declaracionConstanteCONST declaracionVariableIN declaracionVariableINOUT declaracionVariableOUT declaracionVariableVAR declaracionRelacionPOS sentenciaSecuenciaBEGIN END ID .
    (80) declaracionTipoPuntoComa -> . empty
    (81) declaracionTipoPuntoComa -> . declaracionTipoPuntoComaR
    (141) empty -> .
    (82) declaracionTipoPuntoComaR -> . declaracionTipo ;
    (83) declaracionTipoPuntoComaR -> . declaracionTipoPuntoComaR declaracionTipo ;
    (121) declaracionTipo -> . TYPE ID error
    (122) declaracionTipo -> . TYPE ID simboloPor listaIdParentesis ; declaracionConstanteCONST tipoFormalIN tipoFormalINOUT declaracionVariableOUT declaracionVariableVAR declaracionRelacionPOS sentenciaSecuenciaBEGIN END ID
    error           shift and go to state 7
    CONST           reduce using rule 141 (empty -> .)
    IN              reduce using rule 141 (empty -> .)
    INOUT           reduce using rule 141 (empty -> .)
    OUT             reduce using rule 141 (empty -> .)
    VAR             reduce using rule 141 (empty -> .)
    POS             reduce using rule 141 (empty -> .)
    BEGIN           reduce using rule 141 (empty -> .)
    END             reduce using rule 141 (empty -> .)
    TYPE            shift and go to state 12

    declaracionTipoPuntoComa       shift and go to state 8
    empty                          shift and go to state 9
    declaracionTipoPuntoComaR      shift and go to state 10
    declaracionTipo                shift and go to state 11

state 7

    (78) modulo -> MODULE ID ; error .
    MODULE          reduce using rule 78 (modulo -> MODULE ID ; error .)
    $end            reduce using rule 78 (modulo -> MODULE ID ; error .)


state 8

    (79) modulo -> MODULE ID ; declaracionTipoPuntoComa . declaracionConstanteCONST declaracionVariableIN declaracionVariableINOUT declaracionVariableOUT declaracionVariableVAR declaracionRelacionPOS sentenciaSecuenciaBEGIN END ID .
    (84) declaracionConstanteCONST -> . empty
    (85) declaracionConstanteCONST -> . CONST declaracionConstanteRecursivo
    (141) empty -> .
    CONST           shift and go to state 15
    IN              reduce using rule 141 (empty -> .)
    INOUT           reduce using rule 141 (empty -> .)
    OUT             reduce using rule 141 (empty -> .)
    VAR             reduce using rule 141 (empty -> .)
    POS             reduce using rule 141 (empty -> .)
    BEGIN           reduce using rule 141 (empty -> .)
    END             reduce using rule 141 (empty -> .)

    declaracionConstanteCONST      shift and go to state 13
    empty                          shift and go to state 14

state 9

    (80) declaracionTipoPuntoComa -> empty .
    CONST           reduce using rule 80 (declaracionTipoPuntoComa -> empty .)
    IN              reduce using rule 80 (declaracionTipoPuntoComa -> empty .)
    INOUT           reduce using rule 80 (declaracionTipoPuntoComa -> empty .)
    OUT             reduce using rule 80 (declaracionTipoPuntoComa -> empty .)
    VAR             reduce using rule 80 (declaracionTipoPuntoComa -> empty .)
    POS             reduce using rule 80 (declaracionTipoPuntoComa -> empty .)
    BEGIN           reduce using rule 80 (declaracionTipoPuntoComa -> empty .)
    END             reduce using rule 80 (declaracionTipoPuntoComa -> empty .)


state 10

    (81) declaracionTipoPuntoComa -> declaracionTipoPuntoComaR .
    (83) declaracionTipoPuntoComaR -> declaracionTipoPuntoComaR . declaracionTipo ;
    (121) declaracionTipo -> . TYPE ID error
    (122) declaracionTipo -> . TYPE ID simboloPor listaIdParentesis ; declaracionConstanteCONST tipoFormalIN tipoFormalINOUT declaracionVariableOUT declaracionVariableVAR declaracionRelacionPOS sentenciaSecuenciaBEGIN END ID
    CONST           reduce using rule 81 (declaracionTipoPuntoComa -> declaracionTipoPuntoComaR .)
    IN              reduce using rule 81 (declaracionTipoPuntoComa -> declaracionTipoPuntoComaR .)
    INOUT           reduce using rule 81 (declaracionTipoPuntoComa -> declaracionTipoPuntoComaR .)
    OUT             reduce using rule 81 (declaracionTipoPuntoComa -> declaracionTipoPuntoComaR .)
    VAR             reduce using rule 81 (declaracionTipoPuntoComa -> declaracionTipoPuntoComaR .)
    POS             reduce using rule 81 (declaracionTipoPuntoComa -> declaracionTipoPuntoComaR .)
    BEGIN           reduce using rule 81 (declaracionTipoPuntoComa -> declaracionTipoPuntoComaR .)
    END             reduce using rule 81 (declaracionTipoPuntoComa -> declaracionTipoPuntoComaR .)
    TYPE            shift and go to state 12

    declaracionTipo                shift and go to state 16

state 11

    (82) declaracionTipoPuntoComaR -> declaracionTipo . ;
    ;               shift and go to state 17


state 12

    (121) declaracionTipo -> TYPE . ID error
    (122) declaracionTipo -> TYPE . ID simboloPor listaIdParentesis ; declaracionConstanteCONST tipoFormalIN tipoFormalINOUT declaracionVariableOUT declaracionVariableVAR declaracionRelacionPOS sentenciaSecuenciaBEGIN END ID
    ID              shift and go to state 18


state 13

    (79) modulo -> MODULE ID ; declaracionTipoPuntoComa declaracionConstanteCONST . declaracionVariableIN declaracionVariableINOUT declaracionVariableOUT declaracionVariableVAR declaracionRelacionPOS sentenciaSecuenciaBEGIN END ID .
    (90) declaracionVariableIN -> . empty
    (91) declaracionVariableIN -> . IN declaracionVariableRecursivo
    (141) empty -> .
    IN              shift and go to state 21
    INOUT           reduce using rule 141 (empty -> .)
    OUT             reduce using rule 141 (empty -> .)
    VAR             reduce using rule 141 (empty -> .)
    POS             reduce using rule 141 (empty -> .)
    BEGIN           reduce using rule 141 (empty -> .)
    END             reduce using rule 141 (empty -> .)

    declaracionVariableIN          shift and go to state 19
    empty                          shift and go to state 20

state 14

    (84) declaracionConstanteCONST -> empty .
    IN              reduce using rule 84 (declaracionConstanteCONST -> empty .)
    INOUT           reduce using rule 84 (declaracionConstanteCONST -> empty .)
    OUT             reduce using rule 84 (declaracionConstanteCONST -> empty .)
    VAR             reduce using rule 84 (declaracionConstanteCONST -> empty .)
    POS             reduce using rule 84 (declaracionConstanteCONST -> empty .)
    BEGIN           reduce using rule 84 (declaracionConstanteCONST -> empty .)
    END             reduce using rule 84 (declaracionConstanteCONST -> empty .)


state 15

    (85) declaracionConstanteCONST -> CONST . declaracionConstanteRecursivo
    (86) declaracionConstanteRecursivo -> . empty
    (87) declaracionConstanteRecursivo -> . declaracionConstanteRecursivoR
    (141) empty -> .
    (88) declaracionConstanteRecursivoR -> . declaracionConstante
    (89) declaracionConstanteRecursivoR -> . declaracionConstanteRecursivoR declaracionConstante
    (17) declaracionConstante -> . error
    (18) declaracionConstante -> . ID DOSPUNTOSIGUAL expresion ;
    IN              reduce using rule 141 (empty -> .)
    INOUT           reduce using rule 141 (empty -> .)
    OUT             reduce using rule 141 (empty -> .)
    VAR             reduce using rule 141 (empty -> .)
    POS             reduce using rule 141 (empty -> .)
    BEGIN           reduce using rule 141 (empty -> .)
    END             reduce using rule 141 (empty -> .)
    error           shift and go to state 26
    ID              shift and go to state 27

    declaracionConstanteRecursivo  shift and go to state 22
    empty                          shift and go to state 23
    declaracionConstanteRecursivoR shift and go to state 24
    declaracionConstante           shift and go to state 25

state 16

    (83) declaracionTipoPuntoComaR -> declaracionTipoPuntoComaR declaracionTipo . ;
    ;               shift and go to state 28


state 17

    (82) declaracionTipoPuntoComaR -> declaracionTipo ; .
    TYPE            reduce using rule 82 (declaracionTipoPuntoComaR -> declaracionTipo ; .)
    CONST           reduce using rule 82 (declaracionTipoPuntoComaR -> declaracionTipo ; .)
    IN              reduce using rule 82 (declaracionTipoPuntoComaR -> declaracionTipo ; .)
    INOUT           reduce using rule 82 (declaracionTipoPuntoComaR -> declaracionTipo ; .)
    OUT             reduce using rule 82 (declaracionTipoPuntoComaR -> declaracionTipo ; .)
    VAR             reduce using rule 82 (declaracionTipoPuntoComaR -> declaracionTipo ; .)
    POS             reduce using rule 82 (declaracionTipoPuntoComaR -> declaracionTipo ; .)
    BEGIN           reduce using rule 82 (declaracionTipoPuntoComaR -> declaracionTipo ; .)
    END             reduce using rule 82 (declaracionTipoPuntoComaR -> declaracionTipo ; .)


state 18

    (121) declaracionTipo -> TYPE ID . error
    (122) declaracionTipo -> TYPE ID . simboloPor listaIdParentesis ; declaracionConstanteCONST tipoFormalIN tipoFormalINOUT declaracionVariableOUT declaracionVariableVAR declaracionRelacionPOS sentenciaSecuenciaBEGIN END ID
    (123) simboloPor -> . empty
    (124) simboloPor -> . *
    (141) empty -> .
    error           shift and go to state 29
    *               shift and go to state 32
    (               reduce using rule 141 (empty -> .)
    ;               reduce using rule 141 (empty -> .)

    simboloPor                     shift and go to state 30
    empty                          shift and go to state 31

state 19

    (79) modulo -> MODULE ID ; declaracionTipoPuntoComa declaracionConstanteCONST declaracionVariableIN . declaracionVariableINOUT declaracionVariableOUT declaracionVariableVAR declaracionRelacionPOS sentenciaSecuenciaBEGIN END ID .
    (96) declaracionVariableINOUT -> . empty
    (97) declaracionVariableINOUT -> . INOUT declaracionVariableRecursivo
    (141) empty -> .
    INOUT           shift and go to state 35
    OUT             reduce using rule 141 (empty -> .)
    VAR             reduce using rule 141 (empty -> .)
    POS             reduce using rule 141 (empty -> .)
    BEGIN           reduce using rule 141 (empty -> .)
    END             reduce using rule 141 (empty -> .)

    declaracionVariableINOUT       shift and go to state 33
    empty                          shift and go to state 34

state 20

    (90) declaracionVariableIN -> empty .
    INOUT           reduce using rule 90 (declaracionVariableIN -> empty .)
    OUT             reduce using rule 90 (declaracionVariableIN -> empty .)
    VAR             reduce using rule 90 (declaracionVariableIN -> empty .)
    POS             reduce using rule 90 (declaracionVariableIN -> empty .)
    BEGIN           reduce using rule 90 (declaracionVariableIN -> empty .)
    END             reduce using rule 90 (declaracionVariableIN -> empty .)


state 21

    (91) declaracionVariableIN -> IN . declaracionVariableRecursivo
    (92) declaracionVariableRecursivo -> . empty
    (93) declaracionVariableRecursivo -> . declaracionVariableRecursivoR
    (141) empty -> .
    (94) declaracionVariableRecursivoR -> . declaracionVariable
    (95) declaracionVariableRecursivoR -> . declaracionVariableRecursivoR declaracionVariable
    (19) declaracionVariable -> . listaId error
    (20) declaracionVariable -> . listaId : tipo ;
    (21) listaId -> . error
    (22) listaId -> . ID
    (23) listaId -> . listaId , ID
    INOUT           reduce using rule 141 (empty -> .)
    OUT             reduce using rule 141 (empty -> .)
    VAR             reduce using rule 141 (empty -> .)
    POS             reduce using rule 141 (empty -> .)
    BEGIN           reduce using rule 141 (empty -> .)
    END             reduce using rule 141 (empty -> .)
    error           shift and go to state 41
    ID              shift and go to state 42

    declaracionVariableRecursivo   shift and go to state 36
    empty                          shift and go to state 37
    declaracionVariableRecursivoR  shift and go to state 38
    declaracionVariable            shift and go to state 39
    listaId                        shift and go to state 40

state 22

    (85) declaracionConstanteCONST -> CONST declaracionConstanteRecursivo .
    IN              reduce using rule 85 (declaracionConstanteCONST -> CONST declaracionConstanteRecursivo .)
    INOUT           reduce using rule 85 (declaracionConstanteCONST -> CONST declaracionConstanteRecursivo .)
    OUT             reduce using rule 85 (declaracionConstanteCONST -> CONST declaracionConstanteRecursivo .)
    VAR             reduce using rule 85 (declaracionConstanteCONST -> CONST declaracionConstanteRecursivo .)
    POS             reduce using rule 85 (declaracionConstanteCONST -> CONST declaracionConstanteRecursivo .)
    BEGIN           reduce using rule 85 (declaracionConstanteCONST -> CONST declaracionConstanteRecursivo .)
    END             reduce using rule 85 (declaracionConstanteCONST -> CONST declaracionConstanteRecursivo .)


state 23

    (86) declaracionConstanteRecursivo -> empty .
    IN              reduce using rule 86 (declaracionConstanteRecursivo -> empty .)
    INOUT           reduce using rule 86 (declaracionConstanteRecursivo -> empty .)
    OUT             reduce using rule 86 (declaracionConstanteRecursivo -> empty .)
    VAR             reduce using rule 86 (declaracionConstanteRecursivo -> empty .)
    POS             reduce using rule 86 (declaracionConstanteRecursivo -> empty .)
    BEGIN           reduce using rule 86 (declaracionConstanteRecursivo -> empty .)
    END             reduce using rule 86 (declaracionConstanteRecursivo -> empty .)


state 24

    (87) declaracionConstanteRecursivo -> declaracionConstanteRecursivoR .
    (89) declaracionConstanteRecursivoR -> declaracionConstanteRecursivoR . declaracionConstante
    (17) declaracionConstante -> . error
    (18) declaracionConstante -> . ID DOSPUNTOSIGUAL expresion ;
    IN              reduce using rule 87 (declaracionConstanteRecursivo -> declaracionConstanteRecursivoR .)
    INOUT           reduce using rule 87 (declaracionConstanteRecursivo -> declaracionConstanteRecursivoR .)
    OUT             reduce using rule 87 (declaracionConstanteRecursivo -> declaracionConstanteRecursivoR .)
    VAR             reduce using rule 87 (declaracionConstanteRecursivo -> declaracionConstanteRecursivoR .)
    POS             reduce using rule 87 (declaracionConstanteRecursivo -> declaracionConstanteRecursivoR .)
    BEGIN           reduce using rule 87 (declaracionConstanteRecursivo -> declaracionConstanteRecursivoR .)
    END             reduce using rule 87 (declaracionConstanteRecursivo -> declaracionConstanteRecursivoR .)
    error           shift and go to state 26
    ID              shift and go to state 27

    declaracionConstante           shift and go to state 43

state 25

    (88) declaracionConstanteRecursivoR -> declaracionConstante .
    error           reduce using rule 88 (declaracionConstanteRecursivoR -> declaracionConstante .)
    ID              reduce using rule 88 (declaracionConstanteRecursivoR -> declaracionConstante .)
    IN              reduce using rule 88 (declaracionConstanteRecursivoR -> declaracionConstante .)
    INOUT           reduce using rule 88 (declaracionConstanteRecursivoR -> declaracionConstante .)
    OUT             reduce using rule 88 (declaracionConstanteRecursivoR -> declaracionConstante .)
    VAR             reduce using rule 88 (declaracionConstanteRecursivoR -> declaracionConstante .)
    POS             reduce using rule 88 (declaracionConstanteRecursivoR -> declaracionConstante .)
    BEGIN           reduce using rule 88 (declaracionConstanteRecursivoR -> declaracionConstante .)
    END             reduce using rule 88 (declaracionConstanteRecursivoR -> declaracionConstante .)


state 26

    (17) declaracionConstante -> error .
    error           reduce using rule 17 (declaracionConstante -> error .)
    ID              reduce using rule 17 (declaracionConstante -> error .)
    IN              reduce using rule 17 (declaracionConstante -> error .)
    INOUT           reduce using rule 17 (declaracionConstante -> error .)
    OUT             reduce using rule 17 (declaracionConstante -> error .)
    VAR             reduce using rule 17 (declaracionConstante -> error .)
    POS             reduce using rule 17 (declaracionConstante -> error .)
    BEGIN           reduce using rule 17 (declaracionConstante -> error .)
    END             reduce using rule 17 (declaracionConstante -> error .)


state 27

    (18) declaracionConstante -> ID . DOSPUNTOSIGUAL expresion ;
    DOSPUNTOSIGUAL  shift and go to state 44


state 28

    (83) declaracionTipoPuntoComaR -> declaracionTipoPuntoComaR declaracionTipo ; .
    TYPE            reduce using rule 83 (declaracionTipoPuntoComaR -> declaracionTipoPuntoComaR declaracionTipo ; .)
    CONST           reduce using rule 83 (declaracionTipoPuntoComaR -> declaracionTipoPuntoComaR declaracionTipo ; .)
    IN              reduce using rule 83 (declaracionTipoPuntoComaR -> declaracionTipoPuntoComaR declaracionTipo ; .)
    INOUT           reduce using rule 83 (declaracionTipoPuntoComaR -> declaracionTipoPuntoComaR declaracionTipo ; .)
    OUT             reduce using rule 83 (declaracionTipoPuntoComaR -> declaracionTipoPuntoComaR declaracionTipo ; .)
    VAR             reduce using rule 83 (declaracionTipoPuntoComaR -> declaracionTipoPuntoComaR declaracionTipo ; .)
    POS             reduce using rule 83 (declaracionTipoPuntoComaR -> declaracionTipoPuntoComaR declaracionTipo ; .)
    BEGIN           reduce using rule 83 (declaracionTipoPuntoComaR -> declaracionTipoPuntoComaR declaracionTipo ; .)
    END             reduce using rule 83 (declaracionTipoPuntoComaR -> declaracionTipoPuntoComaR declaracionTipo ; .)


state 29

    (121) declaracionTipo -> TYPE ID error .
    ;               reduce using rule 121 (declaracionTipo -> TYPE ID error .)


state 30

    (122) declaracionTipo -> TYPE ID simboloPor . listaIdParentesis ; declaracionConstanteCONST tipoFormalIN tipoFormalINOUT declaracionVariableOUT declaracionVariableVAR declaracionRelacionPOS sentenciaSecuenciaBEGIN END ID
    (125) listaIdParentesis -> . empty
    (126) listaIdParentesis -> . ( listaId )
    (141) empty -> .
    (               shift and go to state 47
    ;               reduce using rule 141 (empty -> .)

    listaIdParentesis              shift and go to state 45
    empty                          shift and go to state 46

state 31

    (123) simboloPor -> empty .
    (               reduce using rule 123 (simboloPor -> empty .)
    ;               reduce using rule 123 (simboloPor -> empty .)


state 32

    (124) simboloPor -> * .
    (               reduce using rule 124 (simboloPor -> * .)
    ;               reduce using rule 124 (simboloPor -> * .)


state 33

    (79) modulo -> MODULE ID ; declaracionTipoPuntoComa declaracionConstanteCONST declaracionVariableIN declaracionVariableINOUT . declaracionVariableOUT declaracionVariableVAR declaracionRelacionPOS sentenciaSecuenciaBEGIN END ID .
    (98) declaracionVariableOUT -> . empty
    (99) declaracionVariableOUT -> . OUT declaracionVariableRecursivo
    (141) empty -> .
    OUT             shift and go to state 50
    VAR             reduce using rule 141 (empty -> .)
    POS             reduce using rule 141 (empty -> .)
    BEGIN           reduce using rule 141 (empty -> .)
    END             reduce using rule 141 (empty -> .)

    declaracionVariableOUT         shift and go to state 48
    empty                          shift and go to state 49

state 34

    (96) declaracionVariableINOUT -> empty .
    OUT             reduce using rule 96 (declaracionVariableINOUT -> empty .)
    VAR             reduce using rule 96 (declaracionVariableINOUT -> empty .)
    POS             reduce using rule 96 (declaracionVariableINOUT -> empty .)
    BEGIN           reduce using rule 96 (declaracionVariableINOUT -> empty .)
    END             reduce using rule 96 (declaracionVariableINOUT -> empty .)


state 35
